updated comments with vim folds

--- a/ebpH/Makefile
+++ b/ebpH/Makefile
@@ -1,5 +1,2 @@
 profile_loader: profile_loader.c
-	gcc -o profile_loader profile_loader.c
-
-exe_finder: exe_finder.c
-	gcc -o exe_finder exe_finder.c
+	gcc -o profile_loader profile_loader.c && chown root:root profile_loader && chmod 700 profile_loader
