added a profile controller

--- a/ebpH/Makefile
+++ b/ebpH/Makefile
@@ -4,7 +4,7 @@ QMLPY = $(QML:.ui=.py)
 RESPY = $(RES:.qrc=_rc.py)
 PY = $(QMLPY) $(RESPY)
 
-all: $(PY) profile_loader
+all: $(PY) ebpH_command
 
 $(QMLPY): $(QML)
 	$(foreach i, $(QML), pyside2-uic $(i) > $(i:.ui=.py);)
@@ -12,7 +12,7 @@ $(QMLPY): $(QML)
 $(RESPY): $(RES)
 	$(foreach i, $(RES), pyside2-rcc $(i) > $(i:.qrc=_rc.py);)
 
-profile_loader: profile_loader.c
+ebpH_command: ebpH_command.c
 	gcc -o profile_loader profile_loader.c && chown root:root profile_loader && chmod 700 profile_loader
 
 clean:
