--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,20 @@
-app:
-    build: .
-    command: ebpH
-    volumes:
-        - .:/app:ro
-        - /var/lib/ebpH:/var/lib/ebpH:rw
-        - $HOME/.Xauthority:/root/.Xauthority:rw
-        - /lib/modules:/lib/modules:ro
-        - /usr/src:/usr/src:ro
-        - /etc/localtime:/etc/localtime:ro
-        - /sys/kernel/debug:/sys/kernel/debug
-    privileged: true
-    net: host
-    environment:
-        - DISPLAY
+version: "2.4"
+services:
+    ebphd:
+        build: .
+        command: ebphd --nodaemon --nolog
+        volumes:
+            - .:/app:ro
+           #- /var/lib/ebpH:/var/lib/ebpH:rw
+           #- $HOME/.Xauthority:/root/.Xauthority:rw
+            - /lib/modules:/lib/modules:ro
+            - /usr/src:/usr/src:ro
+            - /etc/localtime:/etc/localtime:ro
+            - /sys/kernel/debug:/sys/kernel/debug
+            - /sys/fs/bpf:/sys/fs/bpf
+            - /tmp:/tmp
+            - /run:/run
+        privileged: true
+        network_mode: host
+        #environment:
+        #    - DISPLAY
