Added configurable port

--- a/config/defaults.cfg
+++ b/config/defaults.cfg
@@ -16,6 +16,10 @@ log_new_sequences: false
 # -----------------------------------------------------------------------------
 [Daemon]
 
+# Default port which the daemon should use to expose its API
+# This should be a privileged port (< 1024)
+port: 1000
+
 # How many seconds to sleep in between ticks.
 # Higher values will use more CPU resources.
 tick_sleep: 0.1
