--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,8 @@ doq = "*"
 [packages]
 python-daemon = "~=2.2.4"
 ebph = {editable = true, path = "."}
+fastapi = "*"
+uvicorn = "*"
 
 [requires]
 python_version = "3.8"
