--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,14 @@
 -i https://pypi.org/simple
 -e .
+click==7.1.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
 docutils==0.16; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
+fastapi==0.59.0
+h11==0.9.0
+httptools==0.1.1; sys_platform != 'win32' and sys_platform != 'cygwin' and platform_python_implementation != 'PyPy'
 lockfile==0.12.2
+pydantic==1.6; python_version >= '3.6'
 python-daemon==2.2.4
+starlette==0.13.4; python_version >= '3.6'
+uvicorn==0.11.5
+uvloop==0.14.0; sys_platform != 'win32' and sys_platform != 'cygwin' and platform_python_implementation != 'PyPy'
+websockets==8.1; python_full_version >= '3.6.1'
