--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ python-daemon = "~=2.2.4"
 ebph = {editable = true, path = "."}
 fastapi = "*"
 uvicorn = "*"
+requests = "*"
 
 [requires]
 python_version = "3.8"
