Bug fixes and API improvements
Added rate limiting for locality frame notifications

Better exception handling in API

Moved total and max LFC into process struct

Added LFC information to ebph ps

Fixed a bug with hard coded version number when calculating magic number

--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,7 @@ ebph = {editable = true, path = "."}
 fastapi = "*"
 uvicorn = "*"
 requests = "*"
+ratelimit = "*"
 
 [requires]
 python_version = "3.8"
