--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ lockfile==0.12.2
 pydantic==1.6.1; python_version >= '3.6'
 python-daemon==2.2.4
 ratelimit==2.2.1
+requests-unixsocket==0.2.0
 requests==2.24.0
 starlette==0.13.4; python_version >= '3.6'
 urllib3==1.25.9; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4'
