--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,8 @@
 -e .
 certifi==2020.6.20
 chardet==3.0.4
-click==7.1.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-docutils==0.16; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+click==7.1.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
+docutils==0.16; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
 fastapi==0.60.1
 h11==0.9.0
 httptools==0.1.1; sys_platform != 'win32' and sys_platform != 'cygwin' and platform_python_implementation != 'PyPy'
@@ -15,7 +15,7 @@ ratelimit==2.2.1
 requests-unixsocket==0.2.0
 requests==2.24.0
 starlette==0.13.6; python_version >= '3.6'
-urllib3==1.25.10; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3' and python_version < '4'
-uvicorn==0.11.7
+urllib3==1.25.10; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4'
+uvicorn==0.11.8
 uvloop==0.14.0; sys_platform != 'win32' and sys_platform != 'cygwin' and platform_python_implementation != 'PyPy'
 websockets==8.1; python_full_version >= '3.6.1'
