--- a/requirements.txt
+++ b/requirements.txt
@@ -2,20 +2,29 @@
 -e .
 certifi==2020.6.20
 chardet==3.0.4
-click==7.1.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
-docutils==0.16; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
+click==7.1.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+coloredlogs==14.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+docutils==0.16; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+executor==23.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 fastapi==0.60.1
+fasteners==0.15
 h11==0.9.0
 httptools==0.1.1; sys_platform != 'win32' and sys_platform != 'cygwin' and platform_python_implementation != 'PyPy'
+humanfriendly==8.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 idna==2.10; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 lockfile==0.12.2
+monotonic==1.5
+proc==1.0
+property-manager==3.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 pydantic==1.6.1; python_version >= '3.6'
 python-daemon==2.2.4
 ratelimit==2.2.1
 requests-unixsocket==0.2.0
 requests==2.24.0
+six==1.15.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 starlette==0.13.6; python_version >= '3.6'
-urllib3==1.25.10; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4'
+urllib3==1.25.10; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3' and python_version < '4'
 uvicorn==0.11.8
 uvloop==0.14.0; sys_platform != 'win32' and sys_platform != 'cygwin' and platform_python_implementation != 'PyPy'
+verboselogs==1.7
 websockets==8.1; python_full_version >= '3.6.1'
