--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@
 certifi==2020.6.20
 chardet==3.0.4
 click==7.1.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+colorama==0.4.3
 coloredlogs==14.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 docutils==0.16; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 executor==23.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
