Introduce LSM probes and enforcement
* Replace sched:* events with equivalent LSM hooks
* Remove signal stack code from raw_syscalls and move into an rt_sigreturn-specific system call return tracepoint
* Monitor at LSM level rather than system call level
* Implement enforcement

--- a/tests/driver/Makefile
+++ b/tests/driver/Makefile
@@ -2,7 +2,7 @@ CC     = gcc
 LDLAGS =
 CFLAGS = -O0
 
-EXES   = hello
+EXES   = hello malicious
 
 .PHONY: all
 all: $(EXES)
@@ -13,3 +13,6 @@ clean:
 
 hello: hello.c
 	$(CC) $(CFLAGS) $(LDFLAGS) -o hello hello.c
+
+malicious: malicious.c
+	$(CC) $(CFLAGS) $(LDFLAGS) -o malicious malicious.c
